// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PickerToggler should render with maximum props 1`] = `
<DocumentFragment>
  <div
    class="container uui-input-box uui-has-value root uui-picker_toggler uui-size-48 uui-control-mode-form"
  >
    <div
      class="body uui-picker_toggler-multiline"
    >
      <span
        class="uui-button-box uui-enabled root uui-size-36 uui-color-neutral uui-fill-solid uui-tag"
        role="option"
        tabindex="-1"
      >
        <div
          class="uui-caption"
        >
          test
        </div>
        <button
          aria-label="Remove tag"
          class="uui-button-box uui-enabled -clickable container uui-icon_button uui-color-neutral root clearButton -clickable"
          tabindex="0"
          type="button"
        >
          <div
            class="container uui-icon uui-enabled"
          >
            <svg
              class=""
            />
          </div>
        </button>
      </span>
      <input
        aria-haspopup="true"
        autocomplete="no"
        class="uui-input"
        dir="auto"
        tabindex="0"
        type="search"
        value=""
      />
    </div>
    <div
      class="uui-picker_toggler-actions"
    >
      <button
        aria-label="Clear input"
        class="uui-button-box uui-enabled -clickable container uui-icon-cancel clearButton -clickable"
        tabindex="0"
        type="button"
      >
        <div
          class="container uui-icon uui-enabled"
        >
          <svg
            class=""
          />
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PickerToggler should render with minimum props 1`] = `
<DocumentFragment>
  <div
    class="container uui-input-box root uui-picker_toggler uui-size-36 uui-control-mode-form"
  >
    <div
      class="body"
    >
      <input
        aria-haspopup="true"
        autocomplete="no"
        class="uui-input singleInput"
        dir="auto"
        tabindex="0"
        type="search"
        value=""
      />
    </div>
    <div
      class="uui-picker_toggler-actions"
    />
  </div>
</DocumentFragment>
`;
